--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  kirby.todai.io;
+    server_name  localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/log/host.access.log  main;
